DESCW-534 checklist + changelog + overflow fix

--- a/src/styles/public/sites/cleanbc/_cleanbc--patterns-general.scss
+++ b/src/styles/public/sites/cleanbc/_cleanbc--patterns-general.scss
@@ -114,7 +114,6 @@ html body.wp-admin .editor-styles-wrapper {
 			margin: 0 2rem;
 			width: calc(100% - 4rem);
 		}
-		overflow: hidden;
 
 		@media (min-width: $breakpoint-xl) {
 			margin: 0 auto;
